// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component type change 2: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 2: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 2: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 2: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 3: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 3: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 3: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 3: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 4: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 5,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 4,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 4: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 5,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 4,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 4: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 5,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 4,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 4: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 5,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 4,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 5: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 5,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 4,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 5: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 5,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 4,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 5: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 5,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 4,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 5: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 5,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 4,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 6: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 6: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 6: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 6: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 7: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 7: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 7: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 7: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 8: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 8: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 8: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 8: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 9: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 9: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 9: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 9: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 10: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 10: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 10: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 10: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 11: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 11: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 11: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change 11: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type change: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 6,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Stateful",
              "status": "NEW_TREE",
            },
          ],
          "message": "",
          "name": "SettingsPane",
          "status": "INLINED",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Stateful",
              "status": "NEW_TREE",
            },
          ],
          "message": "",
          "name": "MessagePane",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Component type change: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 6,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Stateful",
              "status": "NEW_TREE",
            },
          ],
          "message": "",
          "name": "SettingsPane",
          "status": "INLINED",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Stateful",
              "status": "NEW_TREE",
            },
          ],
          "message": "",
          "name": "MessagePane",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Component type change: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 6,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Stateful",
              "status": "NEW_TREE",
            },
          ],
          "message": "",
          "name": "SettingsPane",
          "status": "INLINED",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Stateful",
              "status": "NEW_TREE",
            },
          ],
          "message": "",
          "name": "MessagePane",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Component type change: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 6,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Stateful",
              "status": "NEW_TREE",
            },
          ],
          "message": "",
          "name": "SettingsPane",
          "status": "INLINED",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Stateful",
              "status": "NEW_TREE",
            },
          ],
          "message": "",
          "name": "MessagePane",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Component type same: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type same: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type same: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Component type same: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Key change with fragments: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 5,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Stateful",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Stateful",
              "status": "NEW_TREE",
            },
          ],
          "message": "",
          "name": "React.Fragment",
          "status": "NORMAL",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Key change with fragments: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 5,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Stateful",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Stateful",
              "status": "NEW_TREE",
            },
          ],
          "message": "",
          "name": "React.Fragment",
          "status": "NORMAL",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Key change with fragments: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 5,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Stateful",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Stateful",
              "status": "NEW_TREE",
            },
          ],
          "message": "",
          "name": "React.Fragment",
          "status": "NORMAL",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Key change with fragments: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 5,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Stateful",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Stateful",
              "status": "NEW_TREE",
            },
          ],
          "message": "",
          "name": "React.Fragment",
          "status": "NORMAL",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Key change: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Stateful",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Stateful",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Key change: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Stateful",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Stateful",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Key change: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Stateful",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Stateful",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Key change: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Stateful",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Stateful",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Key nesting 2: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Key nesting 2: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Key nesting 2: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Key nesting 2: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Key nesting 3: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Key nesting 3: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Key nesting 3: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Key nesting 3: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Key nesting 4: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Key nesting 4: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Key nesting 4: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Key nesting 4: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Key nesting 5: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Key nesting 5: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Key nesting 5: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Key nesting 5: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Key nesting 6: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Key nesting 6: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Key nesting 6: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Key nesting 6: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Key nesting 7: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Key nesting 7: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Key nesting 7: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Key nesting 7: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Key nesting 8: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Key nesting 8: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Key nesting 8: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Key nesting 8: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Foo",
          "status": "INLINED",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Bar",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Key nesting: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 6,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Stateful",
              "status": "NEW_TREE",
            },
          ],
          "message": "",
          "name": "SettingsPane",
          "status": "INLINED",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Stateful",
              "status": "NEW_TREE",
            },
          ],
          "message": "",
          "name": "MessagePane",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Key nesting: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 6,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Stateful",
              "status": "NEW_TREE",
            },
          ],
          "message": "",
          "name": "SettingsPane",
          "status": "INLINED",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Stateful",
              "status": "NEW_TREE",
            },
          ],
          "message": "",
          "name": "MessagePane",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Key nesting: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 6,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Stateful",
              "status": "NEW_TREE",
            },
          ],
          "message": "",
          "name": "SettingsPane",
          "status": "INLINED",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Stateful",
              "status": "NEW_TREE",
            },
          ],
          "message": "",
          "name": "MessagePane",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Key nesting: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 6,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Stateful",
              "status": "NEW_TREE",
            },
          ],
          "message": "",
          "name": "SettingsPane",
          "status": "INLINED",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Stateful",
              "status": "NEW_TREE",
            },
          ],
          "message": "",
          "name": "MessagePane",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Key not changing with fragments: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 5,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Stateful",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Stateful",
              "status": "NEW_TREE",
            },
          ],
          "message": "",
          "name": "React.Fragment",
          "status": "NORMAL",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Key not changing with fragments: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 5,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Stateful",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Stateful",
              "status": "NEW_TREE",
            },
          ],
          "message": "",
          "name": "React.Fragment",
          "status": "NORMAL",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Key not changing with fragments: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 5,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Stateful",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Stateful",
              "status": "NEW_TREE",
            },
          ],
          "message": "",
          "name": "React.Fragment",
          "status": "NORMAL",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Key not changing with fragments: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 5,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Stateful",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Stateful",
              "status": "NEW_TREE",
            },
          ],
          "message": "",
          "name": "React.Fragment",
          "status": "NORMAL",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Lazy branched elements 2: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Lazy branched elements 2: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Lazy branched elements 2: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Lazy branched elements 2: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Lazy branched elements: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Lazy branched elements: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Lazy branched elements: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Lazy branched elements: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;
